syntax = "proto3";

package auth;

option go_package = "./pkg/auth/pb";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service AuthService {
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
  rpc FindAllUsers(FindAllUsersRequest) returns (FindAllUsersResponse) {}
  rpc FindMe(FindOneUserRequest) returns (FindOneUserResponse) {}
  rpc FindOneUser(FindOneUserRequest) returns (FindOneUserResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}

// DeleteTrade

message DeleteUserRequest {
  repeated string id = 1;
}

message DeleteUserResponse {
  uint64 status = 1;
  string error = 2;
}

// Login

message LoginRequest {
  google.protobuf.StringValue email = 1;
  google.protobuf.StringValue password = 2;
}

message LoginResponse {
  uint64 status = 1;
  string error = 2;
  LoginData data = 3;
}

message LoginData {
  string token = 1;
  string role = 2;
  uint64 id = 3;
}

// Register

message RegisterRequest {
  google.protobuf.StringValue email = 1;
  google.protobuf.StringValue password = 2;
  google.protobuf.StringValue firstName = 3;
  google.protobuf.StringValue lastName = 4;
  google.protobuf.StringValue bio = 5;
  google.protobuf.StringValue role = 6;
  google.protobuf.Timestamp createdAt = 7;
}

message RegisterResponse {
  uint64 status = 1;
  string error = 2;
  User data = 3;
}


// Find Users
message FindOneUserRequest {
  uint64 id = 1;
}

message FindOneUserResponse {
  uint64 status = 1;
  string error = 2;
  User data = 3;
}

// Find All Users
message FindAllUsersRequest {}

message FindAllUsersResponse {
  uint64 status = 1;
  string error = 2;
  repeated User data = 3;
}

// Update

message UpdateUserRequest {
  google.protobuf.StringValue email = 1;
  google.protobuf.StringValue password = 2;
  google.protobuf.StringValue firstName = 3;
  google.protobuf.StringValue lastName = 4;
  google.protobuf.StringValue bio = 5;
  google.protobuf.StringValue role = 6;
  google.protobuf.Timestamp createdAt = 7;
  uint64 id = 8;
}

message UpdateUserResponse {
  uint64 status = 1;
  string error = 2;
  User data = 3;
}

// Validate

message ValidateRequest {google.protobuf.StringValue token = 1;}

message ValidateResponse {
  uint64 status = 1;
  string error = 2;
  uint64 userId = 3;
}

message User {
  uint64 id = 1;
  string email = 2;
  string password = 3;
  string firstName = 4;
  string lastName = 5;
  string bio = 6;
  string role = 7;
  string token = 8;
  string createdAt = 9;
}